fix(ui): overflow smart grid (refs #123)

--- a/user-interfaces/components/src/AnkSEGrid/AnkSEGrid.scss
+++ b/user-interfaces/components/src/AnkSEGrid/AnkSEGrid.scss
@@ -178,6 +178,7 @@
     min-height: 0;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
   }
 
   th[data-role="columnsorter"] .k-link {
